--- a/src/app/components/swiper/swiper.component.html
+++ b/src/app/components/swiper/swiper.component.html
@@ -2,14 +2,16 @@
   <ng-template *ngFor="let slide of slides" swiperSlide>
     <div
       style="background-color: {{ slide.background }}"
-      class="relative flex min-h-[80vh]"
+      class="swiper-content relative flex"
     >
-      <div class="container flex items-center justify-between gap-10 md:gap-40 p-5 md:flex-row flex-col">
+      <div
+        class="container my-12 flex flex-col items-center justify-between gap-10 p-5 md:flex-row md:gap-40"
+      >
         <div class="flex-1 text-center md:text-left">
           <p class="text-6xl font-bold text-accent">{{ slide.title }}</p>
           <p class="my-8 text-accent">{{ slide.describtion }}</p>
           <button
-            class="rounded-full border border-primary px-8 py-3 uppercase text-primary"
+            class="btn-primary rounded-full border border-primary px-8 py-3 uppercase text-primary"
           >
             shop now
           </button>
