--- a/src/app/components/swiper/swiper.component.html
+++ b/src/app/components/swiper/swiper.component.html
@@ -11,7 +11,7 @@
           <p class="text-6xl font-bold text-accent">{{ slide.title }}</p>
           <p class="my-8 text-accent">{{ slide.describtion }}</p>
           <button
-            class="btn-primary rounded-full border border-primary px-8 py-3 uppercase text-primary"
+            class="btn-outline-primary uppercase"
           >
             shop now
           </button>
