--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,9 +12,9 @@
 
 @layer components {
   .container {
-    @apply mx-auto;
+    @apply mx-auto px-2;
     @media (min-width: 768px) {
-      max-width: 1200px;
+      @apply max-w-[1200px] px-4;
     }
   }
 }
