Create product card

--- a/src/app/components/benefits/benefits.component.html
+++ b/src/app/components/benefits/benefits.component.html
@@ -1,7 +1,7 @@
 <section class="container my-20">
   <div class="cards">
     <div class="card">
-      <div class="">
+      <div class="image">
         <img
           src="../../../assets/icons/noun-free-delivery-4739681.svg"
           alt=""
@@ -14,7 +14,7 @@
     </div>
 
     <div class="card">
-      <div class="">
+      <div class="image">
         <img src="../../../assets/icons/noun-money-return-4958708.svg" alt="" />
       </div>
       <div>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="card">
-      <div class="">
+      <div class="image">
         <img
           src="../../../assets/icons/noun-customer-service-21270.svg"
           alt=""
@@ -37,7 +37,7 @@
     </div>
 
     <div class="card">
-      <div class="">
+      <div class="image">
         <img
           src="../../../assets/icons/noun-payment-security-4475783.svg"
           alt=""
