--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="product"
-  class="card m-10 flex min-h-[360px] max-w-[220px] flex-col rounded-lg border border-gray-300"
+  class="card flex h-full min-h-[360px] w-full max-w-[250px] flex-col rounded-lg border border-gray-300"
 >
   <div class="relative flex flex-1 items-center overflow-hidden">
     <img class="p-3" [src]="product.image" alt="" />
