--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
 <home-swiper></home-swiper>
 <home-benefits></home-benefits>
-<product-card [product]="product"></product-card>
+<app-exclusive-products></app-exclusive-products>
