Add sales section

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
 <home-swiper></home-swiper>
 <home-benefits></home-benefits>
 <app-exclusive-products></app-exclusive-products>
+<app-sales></app-sales>
