--- a/src/styles/components/titles.scss
+++ b/src/styles/components/titles.scss
@@ -1,5 +1,5 @@
-h2 {
-  @apply relative py-4;
+.section-title {
+  @apply relative py-4 text-center text-2xl font-bold text-accent;
 
   &::after {
     content: "";
