--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,3 +2,4 @@
 <home-benefits></home-benefits>
 <app-exclusive-products></app-exclusive-products>
 <app-sales></app-sales>
+<app-trending-items></app-trending-items>
