Create preview section component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,3 +3,4 @@
 <app-exclusive-products></app-exclusive-products>
 <app-sales></app-sales>
 <app-trending-items></app-trending-items>
+<app-preview-swiper></app-preview-swiper>
