Add brands section

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,3 +4,4 @@
 <app-sales></app-sales>
 <app-trending-items></app-trending-items>
 <app-preview-swiper></app-preview-swiper>
+<app-brands></app-brands>
