Before angular update

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,64 @@
-<p>footer works!</p>
+<footer class="bg-accent">
+  <div class="container py-20">
+    <div class="flex">
+      <div class="">
+        <h3 class="mb-6 font-bold text-white">Contact Info</h3>
+        <ul class="flex flex-col gap-6">
+          <li class="flex items-center gap-4 text-white">
+            
+            
+            <span>123 Street, Old Trafford, NewYork, USA</span>
+          </li>
+          <li>
+            <a
+              href="mailto:info@shopwise.com"
+              target="_blank"
+              class="link flex items-center gap-4"
+              >
+              
+              <span>info@shopwise.com</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="tel:+1-234-567-890"
+              target="_blank"
+              class="link flex items-center gap-4"
+              >
+              
+              <span>+1 234 567 890</span></a
+            >
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <a href="" target="_blank" class="social-link">
+              
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank" class="social-link">
+              <fa-icon [icon]="faFacebook"></fa-icon>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank" class="social-link">
+
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank" class="social-link">
+
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank" class="social-link">
+
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
