--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,3 +1,7 @@
 .link {
   @apply text-white transition-all duration-300 hover:text-primary;
 }
+
+.social-link {
+  @apply text-white transition-all duration-300 hover:text-primary text-2xl;
+}
