--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -7,13 +7,14 @@
 
     <div class="action-btns">
       <button (click)="openProductDetails()">
-        <svg><use href="#zoom-icon"></use></svg>
+        <fa-icon [icon]="faZoom"></fa-icon>
       </button>
       <button class="favorite-btn delay-75" (click)="toggleFavorite()">
-        <svg>
-          <use *ngIf="!product.inMyFavorites" href="#love-icon"></use>
-          <use *ngIf="product.inMyFavorites" href="#love-filled-icon"></use>
-        </svg>
+        <fa-icon *ngIf="product.inMyFavorites" [icon]="faHeartFilled"></fa-icon>
+        <fa-icon
+          *ngIf="!product.inMyFavorites"
+          [icon]="faheartOutlined"
+        ></fa-icon>
       </button>
     </div>
   </div>
@@ -34,28 +35,19 @@
       </div>
 
       <div class="flex justify-center gap-4">
-        <div class="flex">
-          <ng-container *ngFor="let star of [].constructor(ratingStars.filled)">
-            <img
-              class="scale-[1.2]"
-              src="../../../assets/icons/star.svg"
-              alt=""
-            />
-          </ng-container>
-          <ng-container *ngFor="let star of [].constructor(ratingStars.half)">
-            <img
-              class="scale-[1.2]"
-              src="../../../assets/icons/half-star.svg"
-              alt=""
-            />
-          </ng-container>
-          <ng-container *ngFor="let star of [].constructor(ratingStars.empty)">
-            <img
-              class="scale-[1.2]"
-              src="../../../assets/icons/outline-star.svg"
-              alt=""
-            />
-          </ng-container>
+        <div class="flex text-yellow-500">
+          <fa-icon
+            *ngFor="let star of [].constructor(ratingStars.filled)"
+            [icon]="faStarFilled"
+          ></fa-icon>
+          <fa-icon
+            *ngFor="let star of [].constructor(ratingStars.half)"
+            [icon]="faStarHalf"
+          ></fa-icon>
+          <fa-icon
+            *ngFor="let star of [].constructor(ratingStars.empty)"
+            [icon]="faStar"
+          ></fa-icon>
         </div>
         <span class="text-gray-500">({{ product.numberOfReviews }})</span>
       </div>
@@ -65,69 +57,10 @@
           class="btn-fill-primary flex items-center justify-center gap-2"
           (click)="addToCart()"
         >
-          <svg class="h-5 w-5"><use href="#cart-icon"></use></svg>
+          <fa-icon [icon]="faCart"></fa-icon>
           <span>Add To Cart</span>
         </button>
       </div>
     </div>
   </div>
 </div>
-
-<!-- Icons -->
-<svg
-  xmlns="http://www.w3.org/2000/svg"
-  style="display: none; height: 0; width: 0"
->
-  <symbol
-    id="zoom-icon"
-    height="100%"
-    viewBox="0 0 24 24"
-    width="100%"
-    fill="currentColor"
-  >
-    <path
-      d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.78 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.26 4.25c.41.41 1.07.41 1.48 0l.01-.01c.41-.41.41-1.07 0-1.48L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14zm0-7c-.28 0-.5.22-.5.5V9H7.5c-.28 0-.5.22-.5.5s.22.5.5.5H9v1.5c0 .28.22.5.5.5s.5-.22.5-.5V10h1.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5H10V7.5c0-.28-.22-.5-.5-.5z"
-    />
-  </symbol>
-
-  <symbol
-    id="love-icon"
-    height="100%"
-    viewBox="0 0 24 24"
-    width="100%"
-    fill="none"
-  >
-    <path
-      stroke-width="2px"
-      stroke="currentColor"
-      d="M13.35 20.13c-.76.69-1.93.69-2.69-.01l-.11-.1C5.3 15.27 1.87 12.16 2 8.28c.06-1.7.93-3.33 2.34-4.29 2.64-1.8 5.9-.96 7.66 1.1 1.76-2.06 5.02-2.91 7.66-1.1 1.41.96 2.28 2.59 2.34 4.29.14 3.88-3.3 6.99-8.55 11.76l-.1.09z"
-    />
-  </symbol>
-
-  <symbol
-    id="love-filled-icon"
-    height="100%"
-    viewBox="0 0 24 24"
-    width="100%"
-    fill="currentColor"
-  >
-    <path
-      stroke-width="2px"
-      stroke="currentColor"
-      d="M13.35 20.13c-.76.69-1.93.69-2.69-.01l-.11-.1C5.3 15.27 1.87 12.16 2 8.28c.06-1.7.93-3.33 2.34-4.29 2.64-1.8 5.9-.96 7.66 1.1 1.76-2.06 5.02-2.91 7.66-1.1 1.41.96 2.28 2.59 2.34 4.29.14 3.88-3.3 6.99-8.55 11.76l-.1.09z"
-    />
-  </symbol>
-
-  <symbol
-    id="cart-icon"
-    height="100%"
-    viewBox="0 0 24 24"
-    width="100%"
-    fill="currentColor"
-  >
-    <path d="M0 0h24v24H0V0z" fill="none" />
-    <path
-      d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4l-3.87 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2z"
-    />
-  </symbol>
-</svg>
