--- a/src/app/components/swiper/swiper.component.html
+++ b/src/app/components/swiper/swiper.component.html
@@ -3,7 +3,7 @@
     <ng-template *ngFor="let slide of slides" swiperSlide>
       <div
         style="background-color: {{ slide.background }}"
-        class="swiper-content relative flex"
+        class="swiper-content relative flex pt-20"
       >
         <div
           class="container my-12 flex flex-col items-center justify-between gap-10 p-5 md:flex-row md:gap-40"
