--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,23 +9,46 @@
       <span class="hidden md:inline">Shopwise</span>
     </h1>
 
-    <form class="flex-1 relative">
+    <form class="flex-1 md:relative">
       <input
         type="search"
+        #searchInput
         placeholder="What are you looking for?"
+        (input)="onSearchInput(searchInput.value)"
         class="w-full rounded-full border border-gray-300 px-4 py-2 outline-none focus:border-gray-500"
       />
-      <div class="search-results absolute w-full bg-white rounded-2xl shadow-sm top-12 p-4 border border-gray-300">
-        <ul class="flex flex-col gap-2">
-          <li class="flex items-center gap-2">
-            <img
-              src="https://images.unsplash.com/photo-1616166330003-8e1b0b2b2f1a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-              alt=""
-              class="w-10 h-10 rounded-full"
-            />
-            <span>Apple</span>
-          </li>
-        </ul>
+      <div [ngClass]="{ hidden: !searchResultsPopupIsOpened }">
+        <div class="page-blocker fixed left-0 right-0 top-[75px] bottom-0" (click)="searchResultsPopupIsOpened = false">
+
+        </div>
+        <div
+          class="search-results absolute w-[95%] left-[2.5%] md:left-0 z-40 overflow-hidden md:w-full bg-white rounded-2xl shadow-sm  top-20 md:top-12  border border-gray-300"
+        >
+          <ul
+            *ngIf="searchResults.length; else noResults"
+            class="flex flex-col gap-1 py-2"
+          >
+            <li *ngFor="let result of searchResults">
+              <a
+                class="flex items-center gap-2 hover:bg-gray-100 hover:text-primary px-4 py-2 transition-colors "
+                [routerLink]="['/product', result.id]"
+              >
+                <img
+                  [src]="result.images[0]"
+                  alt=""
+                  class="w-10 h-10 rounded-full"
+                />
+                <span>{{result.title}}</span>
+              </a>
+            </li>
+          </ul>
+
+          <ng-template #noResults>
+            <div class="p-4">
+              <p class="text-center text-gray-500">No results found</p>
+            </div>
+          </ng-template>
+        </div>
       </div>
     </form>
 
