--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,13 +14,12 @@
         type="search"
         #searchInput
         placeholder="What are you looking for?"
+        (focus)="openSearchResultsPopup()"
         (input)="onSearchInput(searchInput.value)"
         class="w-full rounded-full border border-gray-300 px-4 py-2 outline-none focus:border-gray-500"
       />
-      <div [ngClass]="{ hidden: !searchResultsPopupIsOpened }">
-        <div class="page-blocker fixed left-0 right-0 top-[75px] bottom-0" (click)="searchResultsPopupIsOpened = false">
-
-        </div>
+      <div *ngIf="searchResults" [ngClass]="{ hidden: !searchResultsPopupIsOpened }">
+        <div class="page-blocker fixed left-0 right-0 top-[75px] bottom-0" (click)="closeSearchResultsPopup()"></div>
         <div
           class="search-results absolute w-[95%] left-[2.5%] md:left-0 z-40 overflow-hidden md:w-full bg-white rounded-2xl shadow-sm  top-20 md:top-12  border border-gray-300"
         >
@@ -30,7 +29,8 @@
           >
             <li *ngFor="let result of searchResults">
               <a
-                class="flex items-center gap-2 hover:bg-gray-100 hover:text-primary px-4 py-2 transition-colors "
+                class="flex items-center gap-2 hover:bg-gray-100 hover:text-primary px-4 py-2 transition-colors"
+                (click)="closeSearchResultsPopup()"
                 [routerLink]="['/product', result.id]"
               >
                 <img
