--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,1 +1,119 @@
-<p>product-details works!</p>
+<div
+  *ngIf="product"
+  class="container mt-24 my-6"
+>
+  <div class="flex gap-8 flex-col md:flex-row">
+    <div class="images w-full md:w-1/2">
+      <div
+        class="thumbnail w-full border border-gray-200 overflow-hidden"
+        (mouseover)="onZoom($event, image)"
+        (mousemove)="onZoom($event, image)"
+        (mouseleave)="offZoom(image)"
+      >
+        <img
+          #image
+          [src]="product.images[currentImageIndex]"
+          class="w-full aspect-square object-contain"
+          alt=""
+        >
+      </div>
+      <div class="other-images mt-4 relative">
+        <swiper [config]="swiperOptions">
+          <ng-template
+            swiperSlide
+            *ngFor="let image of product.images; let i = index"
+          >
+            <img
+              [src]="image"
+              alt=""
+              (click)="currentImageIndex = i"
+              (keyup.enter)="currentImageIndex = i"
+              [ngClass]="{'border-primary': currentImageIndex === i}"
+              tabindex="0"
+              class="w-full aspect-square object-cover border border-gray-200 hover:cursor-pointer hover:border-gray-500 focus:border-primary focus:outline-none transition-all duration-300"
+            >
+          </ng-template>
+        </swiper>
+
+        <div class="swiper-button-prev absolute"></div>
+        <div class="swiper-button-next absolute"></div>
+      </div>
+    </div>
+
+    <div class="content flex flex-col gap-5 w-full md:w-1/2">
+      <p class="text-accent font-bold text-3xl">{{ product.title }}</p>
+      <p class="text-gray-500 text-xl">{{ product.description }}</p>
+
+      <div class="flex gap-2 text-lg items-center flex-wrap">
+        <span class="font-bold text-3xl text-primary">${{ product.price | number: '1.0-0' }}</span>
+        <span
+          class="text-gray-500 line-through"
+          *ngIf="product.discountPercentage"
+        >${{ product.price * product.discountPercentage | number: '1.0-0' }}</span>
+        <span
+          class="text-green-600"
+          *ngIf="product.discountPercentage"
+        >{{ product.discountPercentage | number: '1.0-0' }}% off</span>
+      </div>
+
+      <div class=" flex gap-5 justify-between">
+        <div class="flex text-yellow-500 text-2xl">
+          <fa-icon
+            *ngFor="let star of [].constructor(ratingStars.filled)"
+            [icon]="faStarFilled"
+          ></fa-icon>
+          <fa-icon
+            *ngFor="let star of [].constructor(ratingStars.half)"
+            [icon]="faStarHalf"
+          ></fa-icon>
+          <fa-icon
+            *ngFor="let star of [].constructor(ratingStars.empty)"
+            [icon]="faStar"
+          ></fa-icon>
+        </div>
+
+        <span class="bg-gray-500 text-white p-2 text-lg rounded-md">{{ product.stock }} in stock</span>
+      </div>
+      <hr>
+      <div class="flex flex-wrap gap-5 items-center">
+        <div class="flex gap-2 items-center">
+          <button
+            (click)="decrementQuantity()"
+            class="bg-gray-200 rounded-full h-10 text-xl text-accent aspect-square border border-transparent outline-none focus:border-primary"
+          >-</button>
+          <input
+            type="number"
+            class="border p-2 text-lg text-center w-16 outline-none focus:border-primary"
+            [value]="quantity"
+            min="0"
+            max="{{ product.stock }}"
+          >
+          <button
+            (click)="incrementQuantity()"
+            class="bg-gray-200 rounded-full h-10 text-xl text-accent aspect-square border border-transparent outline-none focus:border-primary"
+          >+</button>
+        </div>
+
+        <button
+          class="btn-fill-primary text-lg flex items-center justify-center gap-2"
+          (click)="addToCart()"
+        >
+          <fa-icon [icon]="faCart"></fa-icon>
+          <span>Add To Cart</span>
+        </button>
+
+        <button class="favorite-btn delay-75 text-accent hover:text-primary transition-all duration-300 text-2xl">
+          <fa-icon
+            *ngIf="product"
+            [icon]="faHeartFilled"
+          ></fa-icon>
+        </button>
+      </div>
+      <hr>
+      <div>
+        <p class="text-gray-500 text-lg">Brand: <span class="text-gray-700">{{product.brand}}</span></p>
+        <p class="text-gray-500 text-lg">Category: <span class="text-gray-700">{{product.category}}</span></p>
+      </div>
+    </div>
+  </div>
+</div>
